# codelab

./: .bazelrc  README.md  WORKSPACE  maven_install.json
base/go/log/: BUILD.bazel  log.go
base/java/com/codelab/base/: BUILD
base/java/com/codelab/base/file/: BUILD.bazel  FileUtils.java
base/java/com/codelab/base/protobuf/: BUILD.bazel  ProtoBufUtils.java
docker/deploy/: Dockerfile  prepare_build.sh  run
http/java/: BUILD  Dockerfile  HelloServer.java  MyHandler.java  prepare_build.sh  readme.txt  run
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/!burnt!sushi/: toml@v0.3.1
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/davecgh/: go-spew@v1.1.0  go-spew@v1.1.1
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/google/: renameio@v0.1.0
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/kisielk/: gotool@v1.0.0
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/kr/: pretty@v0.1.0  pty@v1.1.1  text@v0.1.0
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/pkg/: errors@v0.8.1
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/pmezard/: go-difflib@v1.0.0
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/rogpeppe/: go-internal@v1.3.0
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/stretchr/: objx@v0.1.0  testify@v1.3.0  testify@v1.4.0
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/go.uber.org/: atomic@v1.6.0  atomic@v1.7.0  multierr@v1.5.0  multierr@v1.6.0  tools@v0.0.0-20190618225709-2cfd321de3ee  zap@v1.16.0
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/golang.org/x/: crypto@v0.0.0-20190308221718-c2843e01d9a2  crypto@v0.0.0-20190510104115-cbcb75029529  lint@v0.0.0-20190930215403-16217165b5de  mod@v0.0.0-20190513183733-4bf6d317e70e  net@v0.0.0-20190311183353-d8887717615a  net@v0.0.0-20190404232315-eb5bcb51f2a3  net@v0.0.0-20190620200207-3b0461eec859  sync@v0.0.0-20190423024810-112230192c58  sys@v0.0.0-20190215142949-d0b11bdaac8a  sys@v0.0.0-20190412213103-97732733099d  text@v0.3.0  tools@v0.0.0-20190311212946-11955173bddd  tools@v0.0.0-20190621195816-6e04913cbbac  tools@v0.0.0-20191029041327-9cc4af7d6b2c  tools@v0.0.0-20191029190741-b9c20aec41a5  xerrors@v0.0.0-20190717185122-a985d3407aa7
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/gopkg.in/: check.v1@v0.0.0-20161208181325-20d25e280405  check.v1@v1.0.0-20180628173108-788fd7840127  errgo.v2@v2.1.0  yaml.v2@v2.2.2
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/honnef.co/go/: tools@v0.0.1-2019.2.3
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x009/: 179  185  190  200  210  211  214  216  217
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x009/214.p/: 176
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x009/221.p/: 233
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x009/222.p/: 239
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/1/035.p/: 254
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/1/036.p/: 5
pkg/sumdb/sum.golang.org/: latest
proto/: BUILD  point.proto
rpc/go/base/: BUILD.bazel  base.go
rpc/go/client/: BUILD.bazel  rcd_client.go
rpc/go/data/: BUILD.bazel
rpc/go/server/: BUILD.bazel  rcd_server.go
rpc/java/: BUILD
rpc/java/client/: BUILD.bazel  RcdClient.java
rpc/java/resources/: BUILD.bazel  log4j2.xml
rpc/java/server/: BUILD.bazel  RcdServer.java  RcdServerImpl.java
rpc/java/server/data/: BUILD.bazel
rpc/proto/: BUILD  common.proto  item.proto  service.proto  user.proto
rpc/python/: BUILD  client.py  server.py
rpc/python/client/: BUILD.bazel  client.py
rpc/python/data/: BUILD.bazel  user.json
rpc/python/server/: BUILD.bazel  server.py
rpc/resources/: user.json
rpc/scripts/: readme.txt  run
rule_engine/go/rule/: BUILD.bazel  candi_rule.go  context.go  page.go  post_predict_rule.go  predict_rule.go  result_rule.go  rule.go  rule_engine.go  stage.go  user_profile_rule.go
rule_engine/go/test/: BUILD.bazel  test.go
rule_engine/python/: CandiFilterRule.py  CandiRule.py  Context.py  Page.py  PostPredictRule.py  PredictRule.py  ResultRule.py  Rule.py  RuleEngine.py  Stage.py  UserProfileRule.py  run.py  test.py
