load("@io_bazel_rules_go//go:def.bzl", "go_binary")
go_binary(
    name = "rcd_server",
    srcs = [
        "rcd_server.go",
        "//rpc/go/data:resources"
    ],
    data = [
        "//rpc/go/data:user.json",
    ],
    deps = [
         "//rpc/proto:rcd_go_grpc",
         "@org_golang_x_net//context:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@com_github_golang_glog//:go_default_library",
#         "@org_uber_go_atomic//:go_default_library",
#         "@org_uber_go_zap//buffer:go_default_library",
#         "@org_uber_go_atomic//:atomic",
         "@org_uber_go_zap//:go_default_library",
         "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
         "//rpc/go/base:go_default_library",
#         "//rpc/go/data:resources"
    ]
)