package(default_visibility = ["//visibility:public"])

load("@py_deps//:requirements.bzl", "requirement")

py_binary(
    name = "server",
    srcs = [
        "server.py",
    ],
    data = [
        "//rpc/python/data:user.json"
    ],
    deps = [
#        requirement("grpcio"),
#        requirement('absl-py'),
        "//rpc/proto:data_py_proto",
        "//rpc/proto:rcd_py_grpc",
    ]
)
