package(default_visibility = ["//visibility:public"])
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "rule_engine_lib",
    srcs = glob([
        "*.go"
    ]),
    importpath = "codelab.com/rule_engine/go/rule",
    deps = [
         "@org_golang_x_net//context:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@com_github_golang_glog//:go_default_library",
         "@org_uber_go_zap//:go_default_library",
         "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
         "//base/go/log:go_default_library"
    ]
)